# INFOAFP

./: .gitignore  ProjectProgress.md  ProjectProposal.md  README.md  cabal.project
submit-hs/: CHANGELOG.md  create.sql  database.db  schema.pseudo  submit-hs.cabal
submit-hs-frontend/src/: Main.elm  Route.elm  RouteEvent.elm  Session.elm  Util.elm
submit-hs-frontend/src/ApiClient/: Assignments.elm  Attempts.elm  Classrooms.elm  Grading.elm  Submissions.elm  Users.elm
submit-hs-frontend/src/Model/: Model.elm
submit-hs-frontend/src/Pages/: AddAssignment.elm  AddAttempt.elm  AddClassroom.elm  AddParticipant.elm  AddSubmission.elm  Assignment.elm  Attempt.elm  Classroom.elm  Classrooms.elm  Grade.elm  Login.elm  Register.elm
submit-hs-frontend/src/Routing/: Routing.elm
submit-hs-frontend/src/Subscriptions/: Subscriptions.elm
submit-hs-frontend/src/Update/: Update.elm
submit-hs-frontend/src/View/: View.elm
submit-hs/app/: Api.hs  Database.hs  Main.hs
submit-hs/app/Api/: Server.hs  Spec.hs  Types.hs
submit-hs/app/Api/Types/: AssignmentTypes.hs  AttemptTypes.hs  ClassroomTypes.hs  GradingTypes.hs  SubmissionTypes.hs  UserTypes.hs
submit-hs/app/Application/: Assignments.hs  Attempts.hs  Classrooms.hs  Gradings.hs  Submissions.hs  Users.hs
submit-hs/app/Database/: Assignments.hs  Attempts.hs  Classrooms.hs  Db.hs  Gradings.hs  Model.hs  Submissions.hs  Users.hs
submit-hs/app/Database/Migrations/: InitMigration.hs  Migrate.hs
submit-hs/static/: index.html
