cabal-version:      2.4
name:               submit-hs
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            NONE
author:             Rienk
maintainer:         rienkfidder@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable submit-hs
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:
        Api,
        Database

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:  base ^>=4.16.4.0,
                    servant,
                    servant-server,
                    text,
                    wai,
                    aeson,
                    warp,
                    beam-core,
                    beam-sqlite,
                    sqlite-simple
    hs-source-dirs:   app
    default-language: Haskell2010
